finished the page

--- a/Notifications.html
+++ b/Notifications.html
@@ -323,7 +323,12 @@
         <h2 class="text-base xl:text-xl md:text-xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500">الاشعارات</h2>
     </div>
     </section>
-    <section class=" mx-[2.5%]">
+    <section class=" ml-[2.5%] sm:ml-0 mr-[2.5%]">
+<div class="flex">
+<!-- الاشعارات  -->
+    <div>
+
+
         <div class="flex gap-3 border py-2.5 px-4 justify-between">
             <input type="search" name="leadingIcon" id="leadingIcon" placeholder="بحث" class=" h-8 pl-14 pr-4 py-2.5 rounded-lg text-sm text-gray-600 outline-none border border-[#F5F5F5] focus:border-cyan-300 bg-neutral-100">
             <button type="submit" class="flex rounded-lg focus:bg-gray-100 active:bg-gray-200 text-white lg:flex xs:w-[88px] sm:w-[30px] h-[30px] justify-center items-center rounded-lg bg-[#25A0D5]">
@@ -337,49 +342,203 @@
                 <div
                 class="absolute bottom-auto left-auto right-0 top-1 z-10 inline-block
                 -translate-y-1/2 translate-x-2/4 rotate-0 skew-x-0 skew-y-0 scale-x-100
-                scale-y-100 rounded-full bg-[#DE0F0F] p-1.5 xl:p-2 text-xs"></div>
-                </span> غير مقروء </h5>
+                scale-y-100 rounded-full text-xs"><svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+                </svg></div>
+            </span> غير مقروء </h5>
             <h5>الكل <span>(15)</span></h5>
         </div>
 
-        <div class="flex border py-[1%] px-[2.5%] gap-5">
-
-                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
-                </svg>
-                <img class="w-[77px] sm:w-[77px] " height="60" width="77" src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
-        <div>
-        <div class="flex justify-end gap-3 mt-3">
-            <h5 class="text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
-        </div>
-                <p class="text-xs sm:text-xl mt-[-14px] sm:mt-[-30px]">إشعار تحديث</p>
-                <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
-                    يستبدل في نفس المساحة النصوص في نفس المساحة..
-                </h3>
-            </div>
-            <!-- <div>
-                <h5 class="text-[#999999] text-xs sm:text-base">8/11/2023</h5>
-                <h3 class="w-auto bg-green-200 text-center mt-16 rounded-lg text-[10px]">جارية</h3>
-            </div> -->
-        </div>
-    </section>
-
-
-
-<div class="border md:max-w-[35%] mr-[2.5%] flex justify-between p-[1%] ">
-    <div class="flex items-center text-gray-400 focus-within:text-cyan-400">
-        <input type="search" name="leadingIcon" id="leadingIcon" placeholder="بحث" class="h-[30px] pl-14 pr-4 py-2.5 rounded-lg text-sm text-gray-600 outline-none border border-gray-300 focus:border-cyan-300 bg-neutral-100">
-    </div>
-    <div>
-        <button type="submit" class="rounded-lg	focus:bg-gray-100 active:bg-gray-200 text-white lg:flex w-[30px] h-[30px] justify-center items-center rounded-lg bg-[#25A0D5]">
-            <svg class="fill-current w-[22px] h-[22px]" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
-                <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+        <div class="flex border py-[1%] px-2 gap-2 items-center">
+            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
             </svg>
-        </button>
-    </div>
-</div>
+            <img class="w-[77px] sm:w-[77px] " height="60" width="77" src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl mt-[-14px] sm:mt-[-30px]">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
 
+        <div class="relative flex border py-[5%] px-2 gap-2 items-center">
+            <svg class="" width="10" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="absolute top-3 left-3 text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl ">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+        <div class="relative flex border py-[5%] px-2 gap-2 items-center">
+            <svg class="" width="10" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="absolute top-3 left-3 text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl ">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+
+                <div class="flex border py-[1%] px-2 gap-2 items-center">
+            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <img class="w-[77px] sm:w-[77px] " height="60" width="77" src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl mt-[-14px] sm:mt-[-30px]">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+
+        <div class="relative flex border py-[5%] px-2 gap-2 items-center">
+            <svg class="" width="10" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="absolute top-3 left-3 text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl ">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+        <div class="relative flex border py-[5%] px-2 gap-2 items-center">
+            <svg class="" width="10" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="absolute top-3 left-3 text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl ">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+
+        <div class="flex border py-[1%] px-2 gap-2 items-center">
+            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <img class="w-[77px] sm:w-[77px] " height="60" width="77" src="imges/startup-business-teamwork-meeting-concept 2.svg" alt="">
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl mt-[-14px] sm:mt-[-30px]">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+
+        <div class="relative flex border py-[5%] px-2 gap-2 items-center">
+            <svg class="" width="10" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="absolute top-3 left-3 text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl ">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+        <div class="relative flex border py-[5%] px-2 gap-2 items-center">
+            <svg class="" width="10" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="6" cy="6" r="6" fill="#DE0F0F"/>
+            </svg>
+            <div>
+                <div class="flex justify-end gap-3 mt-3">
+                    <h5 class="absolute top-3 left-3 text-[#999999] text-xs sm:text-base">منذ دقيقة</h5>
+                </div>
+                    <p class="text-xs sm:text-xl ">إشعار تحديث</p>
+                    <h3 class="text-[10px] sm:text-base mt-1.5 sm:mt-4 text-[#707070]">
+                        يستبدل في نفس المساحة النصوص في نفس المساحة..
+                    </h3>
+            </div>
+        </div>
+
+    </div>
+<!-- الاشعارات  -->
+<!-- قسم عرض الاشعارات فارغ -->
+
+    <!-- <div class="border-t hidden sm:flex justify-center w-full items-center flex-col">
+            <svg  width="145" height="145" viewBox="0 0 145 145" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M126.696 117.001H17.2397C16.2818 116.995 15.3422 116.736 14.5148 116.25C13.6874 115.764 13.0012 115.068 12.5248 114.231C12.0483 113.395 11.7984 112.447 11.7998 111.483C11.8013 110.518 12.0541 109.571 12.5331 108.736C17.0413 100.884 22.7125 81.0549 22.7125 56.3908C22.7125 43.2387 27.9019 30.6253 37.1391 21.3254C46.3763 12.0254 58.9046 6.80078 71.968 6.80078C85.0313 6.80078 97.5596 12.0254 106.797 21.3254C116.034 30.6253 121.223 43.2387 121.223 56.3908C121.223 81.0618 126.901 100.884 131.417 108.736C131.896 109.572 132.149 110.52 132.15 111.486C132.151 112.451 131.899 113.4 131.421 114.237C130.943 115.074 130.255 115.77 129.426 116.255C128.597 116.74 127.655 116.997 126.696 117.001Z" fill="#F8F8F8"/>
+                <path d="M136.453 105.865C132.638 99.267 126.967 80.5978 126.967 56.2139C126.967 41.5703 121.174 27.5264 110.861 17.1718C100.549 6.81716 86.5623 1 71.9784 1C57.3945 1 43.4079 6.81716 33.0956 17.1718C22.7832 27.5264 16.9898 41.5703 16.9898 56.2139C16.9898 80.6047 11.3122 99.267 7.49735 105.865C6.52316 107.542 6.0067 109.448 6.00006 111.39C5.99343 113.332 6.49684 115.241 7.45953 116.925C8.42223 118.609 9.81017 120.009 11.4834 120.982C13.1566 121.956 15.0559 122.469 16.9898 122.471H45.0409C46.3095 128.704 49.6834 134.306 54.5919 138.329C59.5004 142.353 65.6422 144.55 71.9784 144.55C78.3147 144.55 84.4564 142.353 89.3649 138.329C94.2734 134.306 97.6473 128.704 98.916 122.471H126.967C128.9 122.468 130.799 121.954 132.471 120.98C134.143 120.005 135.53 118.606 136.492 116.922C137.454 115.238 137.957 113.329 137.95 111.388C137.943 109.447 137.427 107.542 136.453 105.865ZM71.9784 133.513C68.5679 133.512 65.2415 132.45 62.4571 130.472C59.6727 128.495 57.5672 125.699 56.4304 122.471H87.5265C86.3896 125.699 84.2841 128.495 81.4997 130.472C78.7153 132.45 75.389 133.512 71.9784 133.513ZM16.9898 111.428C22.2824 102.29 27.9875 81.1154 27.9875 56.2139C27.9875 44.499 32.6222 33.2639 40.8721 24.9802C49.122 16.6965 60.3113 12.0428 71.9784 12.0428C83.6456 12.0428 94.8348 16.6965 103.085 24.9802C111.335 33.2639 115.969 44.499 115.969 56.2139C115.969 81.0947 121.661 102.269 126.967 111.428H16.9898Z" fill="#D9D9D9"/>
+            </svg>
+            <p class="mt-11 text-[#C3C3C3] text-xl xl:text-[26px]">بالنقر على الاشعارات ستظهر التفاصيل </p>
+    </div> -->
+
+    <!-- قسم عرض الاشعارات فارغ -->
+    <!-- الاشعار -->
+
+    <div class="border-t hidden sm:block  pt-10 px-10">
+        <h3 class="text-xl">إشعار تحديث</h3>
+        <img class="mt-5 " src="imges/startup-business-teamwork-meeting-concept 3.svg" alt="">
+        <p class="mt-5 text-xs">
+            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.
+
+        </p>
+        <div class=" mt-5 bg-[#F1F1F1] flex px-5 py-4 rounded-2xl gap-2.5 w-fit">
+            <svg width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_1150_15423)">
+                    <path d="M7.35593 14.1474C7.15468 13.9462 6.96568 13.7257 6.79506 13.4929C6.51068 13.1027 6.59643 12.5549 6.98756 12.2706C7.37781 11.9862 7.92468 12.0719 8.20993 12.4622C8.32281 12.6179 8.44968 12.7676 8.59231 12.9093C9.29493 13.6119 10.2286 13.9987 11.2217 13.9987C12.2148 13.9987 13.1493 13.6119 13.8511 12.9093L18.6636 8.09681C20.1134 6.64694 20.1134 4.28706 18.6636 2.83719C17.2137 1.38731 14.8538 1.38731 13.4039 2.83719L12.4782 3.76294C12.1361 4.10506 11.5831 4.10506 11.2409 3.76294C10.8988 3.42081 10.8988 2.86781 11.2409 2.52569L12.1667 1.59994C14.2991 -0.533312 17.7684 -0.533312 19.9008 1.59994C22.0332 3.73231 22.0332 7.20169 19.9008 9.33406L15.0883 14.1466C14.0558 15.1799 12.6821 15.7487 11.2217 15.7487C9.76131 15.7487 8.38756 15.1799 7.35593 14.1474ZM5.97168 20.9987C7.43293 20.9987 8.80581 20.4299 9.83831 19.3966L10.7641 18.4708C11.1062 18.1296 11.1062 17.5757 10.7641 17.2336C10.4228 16.8914 9.86893 16.8923 9.52681 17.2336L8.60018 18.1593C7.89756 18.8619 6.96393 19.2487 5.97081 19.2487C4.97768 19.2487 4.04406 18.8619 3.34143 18.1593C2.6388 17.4567 2.25205 16.5231 2.25205 15.5299C2.25205 14.5368 2.6388 13.6023 3.34143 12.9006L8.15393 8.08806C8.85655 7.38544 9.79018 6.99869 10.7833 6.99869C11.7764 6.99869 12.7109 7.38544 13.4127 8.08806C13.5527 8.22894 13.6804 8.37856 13.7942 8.53431C14.0777 8.92544 14.6246 9.01294 15.0166 8.72769C15.4077 8.44331 15.4943 7.89644 15.2099 7.50531C15.0437 7.27606 14.8556 7.05644 14.6508 6.85169C13.6174 5.81744 12.2437 5.24869 10.7833 5.24869C9.32293 5.24869 7.94918 5.81744 6.91668 6.85081L2.10505 11.6633C1.07168 12.6958 0.50293 14.0696 0.50293 15.5299C0.50293 16.9903 1.07168 18.3641 2.10505 19.3966C3.13755 20.4299 4.51043 20.9987 5.97168 20.9987Z" fill="#25A0D5"/>
+                </g>
+                <defs>
+                    <clipPath id="clip0_1150_15423">
+                        <rect width="21" height="21" fill="white" transform="translate(0.5)"/>
+                    </clipPath>
+                </defs>
+            </svg>
+            <a href="" class="text-[#147EF9] underline" id="copy">
+
+                https: //www.etmamalarabia.sa/user_dash
+                <button data-clipboard-target="#copy" type="button" class="btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 17 17" fill="none">
+                                    <path d="M15.1615 4.8849V7.8599C15.1615 10.3391 14.2281 11.3307 11.8948 11.3307H11.1615V9.1349C11.1615 6.65573 10.2281 5.66406 7.89479 5.66406H5.82812V4.8849C5.82812 2.40573 6.76146 1.41406 9.09479 1.41406H11.8948C14.2281 1.41406 15.1615 2.40573 15.1615 4.8849Z" stroke="#C8C8C8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M11.1615 9.1349V12.1099C11.1615 14.5891 10.2281 15.5807 7.89479 15.5807H5.09479C2.76146 15.5807 1.82812 14.5891 1.82812 12.1099V9.1349C1.82812 6.65573 2.76146 5.66406 5.09479 5.66406H7.89479C10.2281 5.66406 11.1615 6.65573 11.1615 9.1349Z" stroke="#C8C8C8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </button>
+            </a>
+
+        </div>
+    </div>
+
+    <!-- الاشعار -->
+</div>
+    </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
+<script>
+    let clipboard = new ClipboardJS('.btn');
+</script>
 </body>
 </html>
